<resources>
    <string name="app_name">SpaceDIM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backToMenu">Back to lobby</string>
    <string name="joinRoom">Join a room</string>
    <string name="ready">Ready !</string>
    <string name="alone">You are alone… Join your friends !</string>
    <string name="notAlone">Yay ! Your friends are here. Click to "Ready" to begin.</string>
    <string name="user1">bmx22c</string>
    <string name="user2">vapie</string>
    <string name="user3">chdrb</string>
    <string name="statusReady">Ready</string>
    <string name="waiting">Waiting</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="gameScore">Final score :</string>
    <string name="whatToDo">What to do ?</string>
    <string name="enterPseudo">Your astronaut name</string>
    <string name="cheh">cheh !</string>
    <string name="winDesc">(prends pas trop la conf quand même)</string>
    <string name="win">GG WP</string>
</resources>