<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/win_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_win"
        tools:context=".screens.win.WinFragment">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win"
            android:textColor="@color/white"
            android:textSize="60dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/neumorphButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.814" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winDesc"
            android:textColor="#88ffffff"
            android:textSize="8dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <TextView
            android:id="@+id/scoreDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/gameScore"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/neumorphButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/finalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_orange"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/neumorphButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/neumorphButton"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backToMenu"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.269"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.937"
            app:neumorph_backgroundColor="#343aa8"
            app:neumorph_shadowColorDark="#252b8f"
            app:neumorph_shadowColorLight="#4247a8"
            app:neumorph_shapeType="flat" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/butonhighscore"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HIGH \n SCORES"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toEndOf="@+id/neumorphButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.937"
            app:neumorph_backgroundColor="#343aa8"
            app:neumorph_shadowColorDark="#252b8f"
            app:neumorph_shadowColorLight="#4247a8"
            app:neumorph_shapeType="flat"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>